Fix layout issue in Module Permission tab when editing a module

--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -501,9 +501,6 @@ html[dir=rtl] .quick-icons .nav-list [class^="icon-"],html[dir=rtl] .quick-icons
 }
 
 /* Module Assignment Tab */
-.view-module .tab-content{
-	overflow: visible;
-}
 #assignment.tab-pane{
 	min-height: 500px;
 }
